# ComfyUI_MSSpeech_TTS

./: README.MD  __init__.py  msspeech.json  msspeech.py  pyproject.toml  requirements.txt  voicelist.ini  voicelist.txt
py/: inputtrigger.py  msspeechTTS.py  playsound.py  playsoundloop.py
